# proteus-ecosystem-superscalar

./: Dockerfile  Dockerfile.riscv-toolchain  README.md  docker-compose.yml
.github/workflows/: build-riscv-toolchain.yml  ci.yml
functional-tests/: Makefile
install-scripts/: proteus.sh  riscv-formal.sh
metrics/: .gitignore  pyproject.toml
metrics/cpu-interfaces/: dynamic.json  static.json
metrics/src/metrics/: build.py  collect.py  config.py  metric.py  plot.py  simulate.py
noninterference-testing/programs/: Makefile.include
simulation/: Makefile  config.json  main.cpp
waveform-analysis/: pyproject.toml
