[project]
name = "metrics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pywellen>=0.22.0",
    "tqdm>=4.67.3",
]

[project.scripts]
build = "metrics.build:main"
simulate = "metrics.simulate:main"
collect = "metrics.collect:main"
plot = "metrics.plot:main"